elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk-ingress
  namespace: c8-labs-31
  annotations:
    kubernetes.io/ingress.class: "gce"
    #networking.gke.io/ssl-services: "elasticsearch-master" # pass through the SSL certificate
    networking.gke.io/managed-certificates: elk-managed-cert
    networking.gke.io/backend-protocol: "HTTP"  # Tell GKE to use HTTP to backend
    cloud.google.com/healthcheck-path: "/login"
spec:
  defaultBackend:
    service:
      name: kibana-kibana
      port:
        number: 5601
